--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port = 8081
 
 # db configuration
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user_registration
-spring.datasource.username=root
-spring.datasource.password=myapp@server
+spring.datasource.url=jdbc:mysql://user-registration.cajegmdxv9d9.ap-south-1.rds.amazonaws.com:3306/user-registration
+spring.datasource.username=admin
+spring.datasource.password=myappserver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
